@@ -1,4 +1,7 @@
 
+2009-04-08 13:45 Ali aliov@xfce.org 
+	 * : Properly unref the device object when battery is removed+fix shutdown callback
+
 2009-04-08  0:23 Ali aliov@xfce.org 
 	 * : Fix issue with battery ref count that was causing a crash when hald restarts
 
